--- a/YaadLife-Lite-FIXED/index.html
+++ b/YaadLife-Lite-FIXED/index.html
@@ -5,22 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>YaadLife Lite – Book Your Jamaica Vacation</title>
   <script src="https://cdn.jsdelivr.net/gh/davidshimjs/qrcodejs/qrcode.min.js"></script>
+  <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>YaadLife Lite – Book Your Jamaica Vacation</title>
+  <script src="https://cdn.jsdelivr.net/gh/davidshimjs/qrcodejs/qrcode.min.js"></script>
   <style>
-  body{font-family:-apple-system,Arial,sans-serif;background:#f4f4f4;margin:0;padding:20px;color:#333}
-  .container{max-width:800px;margin:auto;background:#fff;padding:20px;border-radius:12px;box-shadow:0 4px 20px rgba(0,0,0,.1)}
-  h1,h2{margin:0 0 20px;font-weight:600}
-  .step{margin:30px 0;display:none}
-  .step.active{display:block}
-  select,button,input{padding:12px;margin:8px 0;width:100%;font-size:16px;border-radius:8px;border:1px solid #ddd}
-  button{background:#28a745;color:#fff;border:none;cursor:pointer;font-weight:600}
-  button:hover{background:#218838}
-  .summary{margin:20px 0;padding:15px;background:#e9ecef;border-radius:8px}
-  .item{display:flex;justify-content:space-between;margin:8px 0;font-size:16px}
-  .fee{color:#28a745;font-weight:bold}
-  .qr{margin-top:15px;text-align:center}
-  .hero img{width:100%;max-width:800px;border-radius:12px;margin-bottom:20px}
-  #start-button{background:#28a745;color:white;padding:16px 32px;font-size:18px;border:none;border-radius:12px;cursor:pointer;width:100%;max-width:400px;margin:20px auto;display:block}
-</style>
+    body{font-family:-apple-system,Arial,sans-serif;background:#f4f4f4;margin:0;padding:20px;color:#333}
+    .container{max-width:800px;margin:auto;background:#fff;padding:20px;border-radius:12px;box-shadow:0 4px 20px rgba(0,0,0,.1)}
+    h1,h2{margin:0 0 20px;font-weight:600}
+    .step{margin:30px 0;display:none}
+    .step.active{display:block}
+    select,button,input{padding:12px;margin:8px 0;width:100%;font-size:16px;border-radius:8px;border:1px solid #ddd}
+    button{background:#28a745;color:#fff;border:none;cursor:pointer;font-weight:600}
+    button:hover{background:#218838}
+    .summary{margin:20px 0;padding:15px;background:#e9ecef;border-radius:8px}
+    .item{display:flex;justify-content:space-between;margin:8px 0;font-size:16px}
+    .fee{color:#28a745;font-weight:bold}
+    .qr{margin-top:15px;text-align:center}
+    .hero img{width:100%;max-width:800px;border-radius:12px;margin-bottom:20px}
+    #start-button{background:#28a745;color:white;padding:16px 32px;font-size:18px;border:none;border-radius:12px;cursor:pointer;width:100%;max-width:400px;margin:20px auto;display:block}
+  </style>
 </head>
 <body>
 <div class="container">
