--- a/YaadLife-Lite-FIXED/index.html
+++ b/YaadLife-Lite-FIXED/index.html
@@ -18,7 +18,7 @@
     .item{display:flex;justify-content:space-between;margin:8px 0;font-size:16px}
     .fee{color:#28a745;font-weight:bold}
     .qr{margin-top:15px;text-align:center}
-    .hero img{width:100%;max-width:800px;border-radius:12px;margin-bottom:20px}
+    .hero img{width:100%;max-width:800px;border-radius:12px;margin-bottom:20px;display:block}
     #start-button{background:#28a745;color:white;padding:16px 32px;font-size:18px;border:none;border-radius:12px;cursor:pointer;width:100%;max-width:400px;margin:20px auto;display:block}
   </style>
 </head>
