--- a/YaadLife-Lite-FIXED/index.html
+++ b/YaadLife-Lite-FIXED/index.html
@@ -11,12 +11,15 @@
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
+  <!-- Favicon so Vercel stops 404-ing -->
+  <link rel="icon" href="data:,">
+
   <style>
     :root{--green:#28a745;--dark:#1a1a1a;--light:#f8f9fa;--gray:#6c757d}
     *{margin:0;padding:0;box-sizing:border-box}
     body{font-family:'Inter',sans-serif;background:#f4f4f4;color:#333;line-height:1.6}
     .container{max-width:900px;margin:0 auto;padding:20px}
-    .hero img{width:100%;border-radius:16px;margin-bottom:20px;box-shadow:0 8px 30px rgba(0,0,0,.15)}
+    .hero img{width:100%;border-radius:16px;margin-bottom:20px;box-shadow:0 8px 30px rgba(0,0,0,.15);display:block}
     h1,h2{font-weight:700;color:var(--dark)}
     h1{font-size:1.8rem;margin-bottom:16px}
     h2{font-size:1.4rem;margin:24px 0 12px}
@@ -48,12 +51,12 @@
 <body>
 <div class="container">
 
-  <!-- HERO (real placeholder image) -->
+  <!-- HERO IMAGE – now works everywhere (no 404) -->
   <div class="hero">
     <img src="https://images.unsplash.com/photo-1506929562872-bb421503ef21?w=1200&fit=crop" alt="Jamaica Vibes">
   </div>
 
-  <!-- STEP 0 – Welcome -->
+  <!-- STEP 0 -->
   <div id="step0" class="step active">
     <h1>How can we help you book your vacation package?</h1>
     <button id="start-button">Start Building</button>
@@ -62,7 +65,7 @@
     </div>
   </div>
 
-  <!-- STEP 1 – Abroad / Local -->
+  <!-- STEP 1 -->
   <div id="step1" class="step">
     <h2>Are you traveling to Jamaica?</h2>
     <div class="option-card selected" data-value="yes">
@@ -73,28 +76,28 @@
     </div>
   </div>
 
-  <!-- STEP 2 – From city -->
+  <!-- STEP 2 -->
   <div id="step2" class="step">
     <h2>Where are you traveling from?</h2>
     <input type="text" placeholder="e.g. Miami, USA" id="fromCity">
     <button onclick="nextStep(3)">Next</button>
   </div>
 
-  <!-- STEP 3 – Arrival date -->
+  <!-- STEP 3 -->
   <div id="step3" class="step">
     <h2>When do you arrive?</h2>
     <input type="date" id="arriveDate">
     <button onclick="nextStep(4)">Next</button>
   </div>
 
-  <!-- STEP 4 – Choose parish (populated dynamically) -->
+  <!-- STEP 4 – Parishes (populated dynamically) -->
   <div id="step4" class="step">
     <h2>Which parish will you stay in?</h2>
     <div id="parish-options"></div>
-    <button style="display:none;" id="parish-next" onclick="nextStep(5)">Next</button>
+    <button id="parish-next" style="display:none;margin-top:20px;" onclick="nextStep(5)">Next</button>
   </div>
 
-  <!-- STEP 5 – Coastal / Inland -->
+  <!-- STEP 5 – Vibe -->
   <div id="step5" class="step">
     <h2>Inland or Coastal vibe?</h2>
     <div class="option-card" data-value="coastal">
@@ -108,7 +111,7 @@
     <button onclick="loadStays()">Next</button>
   </div>
 
-  <!-- STEP 6 – Choose stay -->
+  <!-- STEP 6 – Stay -->
   <div id="step6" class="step">
     <h2>Choose your stay</h2>
     <div id="stay-options"></div>
@@ -122,7 +125,7 @@
     <button onclick="nextStep(8)">Next to Tours</button>
   </div>
 
-  <!-- STEP 8 – Tours (optional) -->
+  <!-- STEP 8 – Tours -->
   <div id="step8" class="step">
     <h2>Add tours (optional)</h2>
     <div id="tour-options"></div>
@@ -137,11 +140,9 @@
     <button onclick="payNow()">Pay & Generate SBT / QR</button>
     <div id="qr-area"></div>
   </div>
-
 </div>
 
 <script>
-/* ---------- DATA ---------- */
 const MOCK = {
   accommodations: {
     kingston: [
@@ -149,9 +150,7 @@ const MOCK = {
       {name:"Harbor View Apt",price:80,source:"Airbnb",img:"https://images.unsplash.com/photo-1522706323590-d12735f6b2d4?w=400",type:"coastal"},
       {name:"Kingston Roots GH",price:100,source:"Local",img:"https://images.unsplash.com/photo-1512918728675-ed5a9ecdebfd?w=400",type:"inland"}
     ],
-    "st-andrew": [
-      {name:"Blue Mountain Cabin",price:200,source:"Local",img:"https://images.unsplash.com/photo-1505843513577-22bb7d21e455?w=400",type:"inland"}
-    ]
+    "st-andrew": [{name:"Blue Mountain Cabin",price:200,source:"Local",img:"https://images.unsplash.com/photo-1505843513577-22bb7d21e455?w=400",type:"inland"}]
   },
   transport: { kingston: [
     {name:"Lynk Airport → City",price:25,source:"Lynk"},
@@ -166,19 +165,15 @@ const MOCK = {
 let state = { from: '', arrive: '', parish: '', vibe: '', stay: null, transport: [], tours: [] };
 const parishes = ["kingston","st-andrew","st-thomas","portland","st-mary","st-ann","trelawny","st-james","hanover","westmoreland","st-elizabeth","manchester","clarendon","st-catherine"];
 
-/* ---------- NAVIGATION ---------- */
 function nextStep(n) {
   document.querySelectorAll('.step').forEach(s => s.classList.remove('active'));
-  const target = document.getElementById(n === 9 ? 'summary' : 'step' + n);
+  const target = n === 9 ? document.getElementById('summary') : document.getElementById('step' + n);
   target.classList.add('active');
-
-  /* Auto-load content when a step becomes visible */
   if (n === 4) renderParishes();
   if (n === 7) loadTransport();
   if (n === 8) loadTours();
 }
 
-/* ---------- PARISHES ---------- */
 function renderParishes() {
   const container = document.getElementById('parish-options');
   container.innerHTML = '';
@@ -196,14 +191,12 @@ function renderParishes() {
   });
 }
 
-/* ---------- STAYS ---------- */
 function loadStays() {
-  if (!state.parish) return alert('Pick a parish first');
+  if (!state.parish) return alert('Please select a parish first');
   const container = document.getElementById('stay-options');
   container.innerHTML = '';
   const items = MOCK.accommodations[state.parish] || [];
   const filtered = state.vibe ? items.filter(i => i.type === state.vibe) : items;
-
   filtered.forEach(item => {
     const card = document.createElement('div');
     card.className = 'option-card';
@@ -225,94 +218,67 @@ function loadStays() {
   nextStep(6);
 }
 
-/* ---------- TRANSPORT ---------- */
 function loadTransport() {
-  const container = document.getCElementById('transport-options');
+  const container = document.getElementById('transport-options');
   container.innerHTML = '';
-  const items = MOCK.transport[state.parish] || [];
-  items.forEach(t => {
-    const chk = document.createElement('div');
-    chk.className = 'option-card';
-    chk.innerHTML = `<div class="info"><div class="name">${t.name} – $${t.price}</div></div>`;
-    chk.onclick = () => {
-      chk.classList.toggle('selected');
-      if (chk.classList.contains('selected')) {
-        state.transport.push(t);
-      } else {
-        state.transport = state.transport.filter(x => x.name !== t.name);
-      }
+  (MOCK.transport[state.parish] || []).forEach(t => {
+    const el = document.createElement('div');
+    el.className = 'option-card';
+    el.innerHTML = `<div class="info"><div class="name">${t.name} – $${t.price}</div></div>`;
+    el.onclick = () => {
+      el.classList.toggle('selected');
+      if (el.classList.contains('selected')) state.transport.push(t);
+      else state.transport = state.transport.filter(x => x.name !== t.name);
     };
-    container.appendChild(chk);
+    container.appendChild(el);
   });
 }
 
-/* ---------- TOURS ---------- */
 function loadTours() {
   const container = document.getElementById('tour-options');
   container.innerHTML = '';
-  const items = MOCK.tours.kingston || [];
-  items.forEach(t => {
-    const chk = document.createElement('div');
-    chk.className = 'option-card';
-    chk.innerHTML = `<div class="info"><div class="name">${t.name} – $${t.price}</div></div>`;
-    chk.onclick = () => {
-      chk.classList.toggle('selected');
-      if (chk.classList.contains('selected')) {
-        state.tours.push(t);
-      } else {
-        state.tours = state.tours.filter(x => x.name !== t.name);
-      }
+  (MOCK.tours.kingston || []).forEach(t => {
+    const el = document.createElement('div');
+    el.className = 'option-card';
+    el.innerHTML = `<div class="info"><div class="name">${t.name} – $${t.price}</div></div>`;
+    el.onclick = () => {
+      el.classList.toggle('selected');
+      if (el.classList.contains('selected')) state.tours.push(t);
+      else state.tours = state.tours.filter(x => x.name !== t.name);
     };
-    container.appendChild(chk);
+    container.appendChild(el);
   });
 }
 
-/* ---------- SUMMARY ---------- */
 function showSummary() {
   const container = document.getElementById('summary-items');
   container.innerHTML = '';
   let total = 0;
-
   const add = (label, price, fee = 0) => {
     total += price + fee;
     const div = document.createElement('div');
     div.className = 'item';
-    div.innerHTML = `<span>${label}</span><span>$${price}${fee?` + <strong>$${fee}</strong>`:''}</span>`;
+    div.innerHTML = `<span>${label}</span><span>$${price}${fee ? ` + <strong>$${fee}</strong> fee` : ''}</span>`;
     container.appendChild(div);
   };
-
   if (state.stay) add(state.stay.name, state.stay.price, state.stay.fee);
   state.transport.forEach(t => add(t.name, t.price));
   state.tours.forEach(t => add(t.name, t.price));
-
   document.getElementById('total').textContent = total.toFixed(2);
-  nextStep(9);   // 9 → summary step
+  nextStep(9);
 }
 
-/* ---------- PAY & QR ---------- */
 function payNow() {
   const total = parseFloat(document.getElementById('total').textContent);
   if (total === 0) return alert('Add at least one item!');
 
-  const sbt = {
-    id: Date.now(),
-    user: 'YaadUser-' + Math.random().toString(36).substr(2,5),
-    package: {...state, total},
-    timestamp: new Date().toISOString()
-  };
-
-  // Download JSON SBT
+  const sbt = {id: Date.now(), user: 'YaadUser-'+Math.random().toString(36).substr(2,5), package: {...state, total}, timestamp: new Date().toISOString()};
   const blob = new Blob([JSON.stringify(sbt, null, 2)], {type:'application/json'});
   const url = URL.createObjectURL(blob);
-  const a = document.createElement('a');
-  a.href = url; a.download = `yaadlife-sbt-${sbt.id}.json`;
-  a.click();
+  const a = document.createElement('a'); a.href = url; a.download = `yaadlife-sbt-${sbt.id}.json`; a.click();
 
-  // QR codes
   const qrArea = document.getElementById('qr-area');
   qrArea.innerHTML = '<h3>Scan to redeem</h3><div class="qr-grid"></div>';
-  const grid = qrArea.querySelector('.qr-grid');
-
   const items = [];
   if (state.stay) items.push(`Stay: ${state.stay.name}`);
   state.transport.forEach(t => items.push(`Ride: ${t.name}`));
@@ -321,49 +287,38 @@ function payNow() {
   items.forEach(txt => {
     const div = document.createElement('div');
     div.className = 'qr-item';
-    const qrDiv = document.createElement('div');
-    new QRCode(qrDiv, {text: txt, width:120, height:120, colorDark: "#000", colorLight: "#fff"});
-    div.appendChild(qrDiv);
-    const p = document.createElement('p');
-    p.textContent = txt;
-    div.appendChild(p);
-    grid.appendChild(div);
+    const qr = document.createElement('div');
+    new QRCode(qr, {text: txt, width:120, height:120});
+    div.appendChild(qr);
+    const p = document.createElement('p'); p.textContent = txt; div.appendChild(p);
+    qrArea.querySelector('.qr-grid').appendChild(div);
   });
 
-  alert('SBT downloaded & QR codes ready!');
+  alert('SBT downloaded + QR codes ready!');
 }
 
-/* ---------- EVENT BINDINGS ---------- */
+/* INIT */
 document.getElementById('start-button').onclick = () => nextStep(1);
 
 document.getElementById('step1').addEventListener('click', e => {
   const card = e.target.closest('.option-card');
-  if (!card) return;
-  document.querySelectorAll('#step1 .option-card').forEach(c => c.classList.remove('selected'));
-  card.classList.add('selected');
-  nextStep(card.dataset.value === 'yes' ? 2 : 4);
+  if (card) {
+    document.querySelectorAll('#step1 .option-card').forEach(c => c.classList.remove('selected'));
+    card.classList.add('selected');
+    nextStep(card.dataset.value === 'yes' ? 2 : 4);
+  }
 });
 
-document.getElementById('fromCity').addEventListener('change', () => {
-  state.from = document.getElementById('fromCity').value;
-});
+document.getElementById('fromCity').onchange = e => state.from = e.target.value;
+document.getElementById('arriveDate').onchange = e => state.arrive = e.target.value;
 
-document.getElementById('arriveDate').addEventListener('change', () => {
-  state.arrive = document.getElementById('arriveDate').value;
-});
-
-document.getElementById('parish-next').addEventListener('click', () => {
-  if (!state.parish) return alert('Select a parish');
-  nextStep(5);
-});
-
-/* Coastal / Inland selection */
 document.getElementById('step5').addEventListener('click', e => {
   const card = e.target.closest('.option-card');
-  if (!card) return;
-  document.querySelectorAll('#step5 .option-card').forEach(c => c.classList.remove('selected'));
-  card.classList.add('selected');
-  state.vibe = card.dataset.value;
+  if (card) {
+    document.querySelectorAll('#step5 .option-card').forEach(c => c.classList.remove('selected'));
+    card.classList.add('selected');
+    state.vibe = card.dataset.value;
+  }
 });
 </script>
 </body>
